--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: "Comic Sans MS";
 }
 
 html,
@@ -30,7 +31,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0;
   padding: 0;
 }
@@ -66,4 +68,19 @@ header
   display: flex;
   /* flexの時はgap使える、flex時のみ */
   gap: 20px;
+}
+
+/*===========================
+footer
+=============================*/
+.footer {
+  color: #fff;
+  background: #ce5230;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.footer-right {
+  margin-right: 40px;
 }
