--- a/css/index.css
+++ b/css/index.css
@@ -50,7 +50,9 @@ a {
 
 .content {
   /* グレーの線 */
+  border-bottom: 3px solid grey;
   /* パディング */
+  padding: 30px;
 }
 
 /*===========================
@@ -71,7 +73,7 @@ header
 }
 .header-left-title {
   font-family: "Comic Sans MS";
-  font-size: 16px;
+  font-size: 24px;
   font-weight: 500;
 }
 
@@ -87,40 +89,153 @@ header
 /*===========================
 main
 =============================*/
-.main {
-  background: #ce5230;
-  
+.about-me,
+.main-introduction,
+.main-career {
+  background: #dad2c4;
 }
 
 /*===========================
 main-image
 =============================*/
+.main-top {
+  background: #ce5230;
+  text-align: center;
+}
+
 .main-img {
   padding-top: 30px;
-  width: 70%;
+  width: 400px;
   height: auto;
 }
 
-.main-image p{
-  text-align: center;
+.main-top p {
   color: #fff;
 }
+
 /*===========================
 about-me
 =============================*/
+.about-me {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .about-me-left {
-  padding: 50px;
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: auto;
+}
+
+.about-me-right h2 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.profile {
+  margin: 0 auto;
+  width: 70%;
+  background: #ce5230;
+  border: 3px solid grey;
+  color: #fff;
+  padding: 30px;
+  line-height: 2;
+}
+
+.profile th {
+  text-align: left;
+  width: 120px;
 }
 
 /*===========================
 introduction
 =============================*/
+.main-introduction {
+  display: flex;
+  padding: 50px;
+}
 
+.main-introduction-child {
+  width: 33%;
+  padding: 20px;
+}
+.main-introduction h3{
+  text-align: center;
+  color: #ce5230;
+  font-size: 50px;
+  font-weight: 700;
+
+}
+
+.main-introduction img {
+  width: 300px;
+  height: auto;
+}
+
+.main-introduction p {
+  text-align: left;
+}
 /*===========================
 career
 =============================*/
+.main-career {
+  display: flex;
+}
+
+/* バックグラウンドの基本セット、背景画像CSS */
+.timeline {
+  background-size: 650px 650px;
+  width: 650px;
+  height: 650px;
+  background-image: url(../img/time-tree.e774d4e.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+}
+
+.timeline p {
+  position: absolute;
+  width: 100px;
+  left: 50%;
+}
+
+.high-school {
+  top: 58px;
+  margin-left: -175px;
+  color: #fd5e6f;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.university {
+  top: 200px;
+  margin-left: 100px;
+  color: #08a68e;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.communication {
+  top: 350px;
+  margin-left: -175px;
+  color: #93b7c8;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.skill {
+  top: 505px;
+  margin-left: 100px;
+  color: #285b6d;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.main-career-image img {
+  width: 300px;
+  height: 300px;
+}
+
 
 /*===========================
 footer
