--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,8 @@ body {
 body {
   font-family: "Noto Sans JP", sans-serif;
   color: #2c3e50;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 img {
@@ -42,12 +44,6 @@ a {
   text-decoration: none;
 }
 
-.inner {
-  width: 1200px;
-  max-width: 100%;
-  margin: 0 auto;
-}
-
 .content {
   /* グレーの線 */
   border-bottom: 3px solid grey;
@@ -60,6 +56,7 @@ header
 =============================*/
 .header {
   color: #fff;
+  font-weight: 700;
   background: #ce5230;
   display: flex;
   justify-content: space-between;
@@ -74,7 +71,6 @@ header
 .header-left-title {
   font-family: "Comic Sans MS";
   font-size: 24px;
-  font-weight: 500;
 }
 
 .header-right {
@@ -111,6 +107,7 @@ main-image
 
 .main-top p {
   color: #fff;
+  font-size: 22px;
 }
 
 /*===========================
@@ -244,4 +241,68 @@ footer
 
 .footer-right {
   margin-right: 40px;
+}
+
+/*===========================
+レスポンシブ表示
+=============================*/
+@media screen and (max-width: 959px) {
+  h2 {
+    font-size: 32px;
+    font-weight: 400;
+    padding: 50px 20px;
+  }
+
+  /* header */
+  .header {
+    padding: 10px 0;
+    height: 50px;
+    width: 100%;
+    position: sticky;
+    text-align: center;
+    top: 0;
+  }
+
+  .header-left-title {
+    font-size: 16px;
+  }
+
+  /* main */
+  .main-top {
+    padding: 71px 50px 185px;
+  }
+  .main-top p {
+    font-size: 18px;
+  }
+
+  .main-img {
+    width: 70%;
+  }
+
+  /* about-me */
+
+  .about-me {
+    display: block;
+  }
+  .about-me-left {
+    width: 100%;
+    text-align: center;
+  }
+  .about-me-left img {
+    height: 400px;
+    padding: 30px;
+  }
+
+  .profile {
+    width: 100%;
+    color: #ce5230;
+    background: #dad2c5;
+    border: none;
+    padding: 0;
+    margin-bottom: 50px;
+  }
+
+  .profile th, td{
+    font-weight: 500;
+  }
 }
