--- a/css/index.css
+++ b/css/index.css
@@ -247,6 +247,10 @@ footer
 レスポンシブ表示
 =============================*/
 @media screen and (max-width: 959px) {
+  body {
+    min-width: 380px;
+  }
+
   h2 {
     font-size: 32px;
     font-weight: 400;
@@ -261,6 +265,7 @@ footer
     position: sticky;
     text-align: center;
     top: 0;
+    z-index: 1;
   }
 
   .header-left-title {
@@ -291,6 +296,10 @@ footer
   .about-me-left img {
     height: 400px;
     padding: 30px;
+  }
+
+  .about-me-right h2 {
+    margin-bottom: 0;
   }
 
   .profile {
@@ -325,22 +334,57 @@ footer
   }
 
   .main-career h2 {
-    padding: 20px 50px;
+    padding: 0 20px;
   }
 
   .timeline {
-    background-size: 500px 500px;
-    width: 500px;
-    height: 500px;
+    background-size: 550px 550px;
+    width: 100%;
+    height: 550px;
+    /* 中央揃え */
     margin: 0px auto;
   }
 
-  .high-school {
+  .timeline p {
+    font-size: 10px;
+    font-weight: 500;
   }
-  /* footer */
-  .footer {
-    display: block;
+  .high-school {
+    top: 50px;
+    margin-left: -150px;
   }
 
-  .
+  .university {
+    top: 180px;
+    margin-left: 90px;
+  }
+
+  .communication {
+    top: 295px;
+    margin-left: -150px;
+  }
+
+  .skill {
+    top: 430px;
+    margin-left: 90px;
+  }
+
+  .main-career-image img{
+    width: 300px;
+    height: 300px;
+    margin: 40px;
+  }
+  /* footer */
+  .copyright{
+    font-size: 12px;
+  }
+
+  .footer-right a{
+    font-weight: 700;
+  }
+
+  .footer-left {
+    width: 60%;
+    padding-right: 20px;
+  }
 }
